--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Branch</title>
 </head>
 <body>
+    <form action="">
     <h1>Branch homework</h1>
     <input type="text">Branch name
-    <p>If you want to create branch,you are be very attention</p>
+    <p>i am ready for work</p>
     <div class="box"><h2>Junior front end developer</h2></div>
+</form>
 </body>
 </html>
