--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <input type="text">Branch name
     <p>i am ready for work</p>
     <div class="box"><h2>Junior front end developer</h2></div>
+    <p class="information">this is a develop branch</p>
 </form>
 </body>
 </html>
