--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="">
-    <h1>Branch homework</h1>
+    <h3>BRANCH HOMEWORK</h3>
     <input type="text">Branch name
     <p>i am ready for work</p>
     <div class="box"><h2>Junior front end developer</h2></div>
