--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>i am ready for work</p>
     <div class="box"><h2>Junior front end developer</h2></div>
     <p class="information">this is a develop branch</p>
+    <img src="" alt="">
 </form>
 </body>
 </html>
